refactor: use .toList() instead of .collect(Collectors.toList()), fix byte masking